--- a/detail.html
+++ b/detail.html
@@ -1,24 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detail</title>
-</head>
-<body>
-    <div>
-    <div>
-        <img src="/assests/images/logo.png" height="100px" width="150px" alt="logo">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Detail</title>
+    </head>
+    <body>
+        <div>
+            <div>
+                <img src="/assests/images/logo.png" height="100px" width="150px"
+                    alt="logo">
+                <a href="login.html" target="_blank">Login</a>
+            </div>
+            <div>
+                <img
+                    src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"
+                    alt="">
+                    <br>
+                <a href="payment.html">Book Now</a>
+                <br>
+                <h2>Raddison Blu Hotel</h2>
+                RATING
+                <p>5 Star</p>
+                AMENITIES
+                <ul>
+                    <li>Room Service</li>
+                    <li>Restaurant</li>
+                    <li>Business center</li>
+                    <li>Fitness center</li>
+                    <li>Pool</li>
+
+                </ul>
+                <h5>DESCRIPTION</h5>
+                <p>ldklcdnajkvjkd sscjbkcfbkaf ksbkaskbjhc cjsajcsancjhccb jhasjckacbjhaj basjcbkacjgc</p>
+            </div>
+            <div>
+                <a href="contact.html" target="_blank">Contact Us</a>
         <br>
-        header div
-    </div>
-    <div>
-        content div
-    </div>
-    <div>
-        footer div
-    </div>
-</div>
-</body>
+       <a href="https://www.facebook.com/" target="_blank"> <img src="/assests/images/facebook.png" height="20px" width="22px" alt=""></a>
+        <a href="https://www.instagram.com/" target="_blank"><img src="/assests/images/instagram.png" height="20px" width="22px" alt=""></a>
+       <a href="https://twitter.com/" target="_blank"> <img src="/assests/images/twitter.png" height="20px" width="22px" alt=""></a>
+       <br>
+       &copy; 2020 ROOM SEARCH PVT.LTD
+            </div>
+        </div>
+    </body>
 </html>
