--- a/index.html
+++ b/index.html
@@ -10,14 +10,24 @@
     <div>
     <div>
         <img src="/assests/images/logo.png" height="100px" width="150px" alt="logo">
+        <a href="login.html" target="_blank">Login</a>
+    </div>
+    <div>
+       <a href="list.html"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" height="300px" width="300px"  alt="delhi"></a> 
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg"  height="300px" width="300px" alt="goa">
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg"  height="300px" width="300px" alt="charminar">
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg"  height="300px" width="300px" alt="kolkata">
         <br>
-        header div
+        <a href="/index.html">View more >> </a>
     </div>
     <div>
-        content div
-    </div>
-    <div>
-        footer div
+        <a href="contact.html" target="_blank">Contact Us</a>
+        <br>
+       <a href="https://www.facebook.com/" target="_blank"> <img src="/assests/images/facebook.png" height="20px" width="22px" alt=""></a>
+        <a href="https://www.instagram.com/" target="_blank"><img src="/assests/images/instagram.png" height="20px" width="22px" alt=""></a>
+       <a href="https://twitter.com/" target="_blank"> <img src="/assests/images/twitter.png" height="20px" width="22px" alt=""></a>
+       <br>
+       &copy; 2020 ROOM SEARCH PVT.LTD
     </div>
 </div>
 </body>
