--- a/list.html
+++ b/list.html
@@ -8,16 +8,44 @@
 </head>
 <body>
     <div>
+        <div>
+            <img src="/assests/images/logo.png" height="100px" width="150px" alt="logo">
+            <a href="login.html" target="_blank">Login</a>
+        </div>
     <div>
-        <img src="/assests/images/logo.png" height="100px" width="150px" alt="logo">
+        <ul>
+            <li><a href="list.html">List View</a></li>
+            <li><a href="list.html">Map View</a></li>
+        </ul>
+        <a href="detail.html">
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
+        <h3>Raddison Blu Hotel</h3>
+        <p>5 Star</p>
+        <p>New Delhi</p>
+    </a>
         <br>
-        header div
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="">
+        <h3>The Lalit New Delhi</h3>
+        <p>4.5 Star</p>
+        <p>New Delhi</p>    
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="">
+        <h3>Taj Palace</h3>
+        <p>4.0 Star</p>
+        <p>New Delhi</p>
+        <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="">
+        <br>
+        MAP VIEW
+        
     </div>
     <div>
-        content div
-    </div>
-    <div>
-        footer div
+        <br>
+        <a href="contact.html" target="_blank">Contact Us</a>
+        <br>
+       <a href="https://www.facebook.com/" target="_blank"> <img src="/assests/images/facebook.png" height="20px" width="22px" alt=""></a>
+        <a href="https://www.instagram.com/" target="_blank"><img src="/assests/images/instagram.png" height="20px" width="22px" alt=""></a>
+       <a href="https://twitter.com/" target="_blank"> <img src="/assests/images/twitter.png" height="20px" width="22px" alt=""></a>
+       <br>
+       &copy; 2020 ROOM SEARCH PVT.LTD
     </div>
 </div>
 </body>
