--- a/payment.html
+++ b/payment.html
@@ -10,14 +10,33 @@
     <div>
     <div>
         <img src="/assests/images/logo.png" height="100px" width="150px" alt="logo">
+        <a href="login.html" target="_blank">Login</a>
+    </div>
+    <div>
+        <div>
+            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
+            <h3>Raddison Blu Hotel</h3>
+            <p>#38 of 1,289 hotels in New Delhi</p>
+            <p>National Highway 8, New Delhi 110017 India</p>
+        </div>
+        <div>
+            <p><b>Name</b>:John Doe</p>
+            <p><b>Number of Adults</b>: 2</p>
+            <p><b>Check-in Date</b>: 06/06/2020</p>
+            <p><b>Check-out Date</b>: 08/06/2020</p>
+            <p><b>Tariff Breakdown</b>: Rs 1000 x 2 Adults x 5 Nights</p>
+            <p><b>Total Breakdown</b>: Rs 10000</p>
+        </div>
+        <a href="payment.html">Pay Now</a>
+    </div>
+    <div>
+        <a href="contact.html" target="_blank">Contact Us</a>
         <br>
-        header div
-    </div>
-    <div>
-        content div
-    </div>
-    <div>
-        footer div
+       <a href="https://www.facebook.com/" target="_blank"> <img src="/assests/images/facebook.png" height="20px" width="22px" alt=""></a>
+        <a href="https://www.instagram.com/" target="_blank"><img src="/assests/images/instagram.png" height="20px" width="22px" alt=""></a>
+       <a href="https://twitter.com/" target="_blank"> <img src="/assests/images/twitter.png" height="20px" width="22px" alt=""></a>
+       <br>
+       &copy; 2020 ROOM SEARCH PVT.LTD
     </div>
 </div>
 </body>
