--- a/detail.html
+++ b/detail.html
@@ -9,16 +9,25 @@
     <body>
         <div>
             <div>
-                <img src="/assests/images/logo.png" height="100px" width="150px"
-                    alt="logo">
-                <a href="login.html" target="_blank">Login</a>
+               <a href="index.html"> <img src="/assests/images/logo.png" height="100px" width="150px"
+                alt="logo"></a>
+                <a href="login.html">Login</a>
             </div>
             <div>
                 <img
                     src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"
                     alt="">
+                <br>
+                <form action="payment.html">
+                    Adults: <input type="number" required min="1" value="1">
                     <br>
-                <a href="payment.html">Book Now</a>
+                    Name: <input type="text" name="" id="" required><br>
+                    From Date : <input type="date" required><br>
+                    To Date: <input type="date" required><br>
+                    Total: <input type="text" readonly><br>
+                    <button>Book Now</button>
+                </form>
+
                 <br>
                 <h2>Raddison Blu Hotel</h2>
                 RATING
@@ -33,16 +42,23 @@
 
                 </ul>
                 <h5>DESCRIPTION</h5>
-                <p>ldklcdnajkvjkd sscjbkcfbkaf ksbkaskbjhc cjsajcsancjhccb jhasjckacbjhaj basjcbkacjgc</p>
+                <p>ldklcdnajkvjkd sscjbkcfbkaf ksbkaskbjhc cjsajcsancjhccb
+                    jhasjckacbjhaj basjcbkacjgc</p>
             </div>
             <div>
-                <a href="contact.html" target="_blank">Contact Us</a>
-        <br>
-       <a href="https://www.facebook.com/" target="_blank"> <img src="/assests/images/facebook.png" height="20px" width="22px" alt=""></a>
-        <a href="https://www.instagram.com/" target="_blank"><img src="/assests/images/instagram.png" height="20px" width="22px" alt=""></a>
-       <a href="https://twitter.com/" target="_blank"> <img src="/assests/images/twitter.png" height="20px" width="22px" alt=""></a>
-       <br>
-       &copy; 2020 ROOM SEARCH PVT.LTD
+                <a href="contact.html" >Contact Us</a>
+                <br>
+                <a href="https://www.facebook.com/" target="_blank"> <img
+                        src="/assests/images/facebook.png" height="20px"
+                        width="22px" alt=""></a>
+                <a href="https://www.instagram.com/" target="_blank"><img
+                        src="/assests/images/instagram.png" height="20px"
+                        width="22px" alt=""></a>
+                <a href="https://twitter.com/" target="_blank"> <img
+                        src="/assests/images/twitter.png" height="20px"
+                        width="22px" alt=""></a>
+                <br>
+                &copy; 2020 ROOM SEARCH PVT.LTD
             </div>
         </div>
     </body>
