--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <div>
     <div>
         <img src="/assests/images/logo.png" height="100px" width="150px" alt="logo">
-        <a href="login.html" target="_blank">Login</a>
+        <a href="login.html" >Login</a>
     </div>
     <div>
+        <input type="text" placeholder="city">
+        <br>
        <a href="list.html"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" height="300px" width="300px"  alt="delhi"></a> 
         <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg"  height="300px" width="300px" alt="goa">
         <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg"  height="300px" width="300px" alt="charminar">
@@ -21,7 +23,7 @@
         <a href="/index.html">View more >> </a>
     </div>
     <div>
-        <a href="contact.html" target="_blank">Contact Us</a>
+        <a href="contact.html">Contact Us</a>
         <br>
        <a href="https://www.facebook.com/" target="_blank"> <img src="/assests/images/facebook.png" height="20px" width="22px" alt=""></a>
         <a href="https://www.instagram.com/" target="_blank"><img src="/assests/images/instagram.png" height="20px" width="22px" alt=""></a>
