--- a/list.html
+++ b/list.html
@@ -9,8 +9,8 @@
 <body>
     <div>
         <div>
-            <img src="/assests/images/logo.png" height="100px" width="150px" alt="logo">
-            <a href="login.html" target="_blank">Login</a>
+           <a href="index.html"> <img src="/assests/images/logo.png" height="100px" width="150px" alt="logo"></a>
+            <a href="login.html">Login</a>
         </div>
     <div>
         <ul>
@@ -39,7 +39,7 @@
     </div>
     <div>
         <br>
-        <a href="contact.html" target="_blank">Contact Us</a>
+        <a href="contact.html">Contact Us</a>
         <br>
        <a href="https://www.facebook.com/" target="_blank"> <img src="/assests/images/facebook.png" height="20px" width="22px" alt=""></a>
         <a href="https://www.instagram.com/" target="_blank"><img src="/assests/images/instagram.png" height="20px" width="22px" alt=""></a>
