--- a/payment.html
+++ b/payment.html
@@ -9,7 +9,7 @@
 <body>
     <div>
     <div>
-        <img src="/assests/images/logo.png" height="100px" width="150px" alt="logo">
+        <a href="index.html"><img src="/assests/images/logo.png" height="100px" width="150px" alt="logo"></a>
         <a href="login.html" target="_blank">Login</a>
     </div>
     <div>
