--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <div>
-        CONTACT US
+        <form action="index.html">
+        <p>Thank you for reaching out!!!!</p>
+        <p>Please enter your mail and we will get back to you.</p>
+        <input type="text" placeholder="Enter your email">
+        <br>
+        <button>Submit</button>
+    </form>
     </div>
 </body>
 </html>
