--- a/login.html
+++ b/login.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-        LOGIN
+        <form action="index.html">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required placeholder="Enter Username" autocomplete="off">
+            <br>
+            <label for="password">Password:</label>
+            <input type="text" id="password" name="password" required placeholder="Enter Password" autocomplete="">
+            <br>
+            <button>Login</button>
+          </form>
     </div>
 </body>
 </html>
