--- a/detail.html
+++ b/detail.html
@@ -5,18 +5,27 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Detail</title>
+        <style>
+            body{
+                height: 100%;
+                width: 100%;
+            }
+            .main_container{
+                height: 100%;
+                width: 100%;
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <div>
-               <a href="index.html"> <img src="/assests/images/logo.png" height="100px" width="150px"
-                alt="logo"></a>
-                <a href="login.html">Login</a>
-            </div>
+        <div class="main_container">
+            <header>
+                <a href="index.html"> <img src="/assests/images/logo.png" height="60px" width="60px"
+                    alt="logo"></a>
+                    <a href="login.html">Login</a>
+            </header>
             <div>
                 <img
-                    src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"
-                    alt="">
+                    src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="" height="500px" width="500px">
                 <br>
                 <form action="payment.html">
                     Adults: <input type="number" required min="1" value="1">
@@ -42,10 +51,9 @@
 
                 </ul>
                 <h5>DESCRIPTION</h5>
-                <p>ldklcdnajkvjkd sscjbkcfbkaf ksbkaskbjhc cjsajcsancjhccb
-                    jhasjckacbjhaj basjcbkacjgc</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, consequatur. Laborum quos corrupti esse dolor qui itaque doloremque nulla eaque repudiandae, in soluta? Velit alias nam facilis aut magnam ducimus enim quaerat, voluptatem blanditiis esse modi delectus repudiandae praesentium? Provident modi perspiciatis sunt delectus dolore, at atque eligendi cum reprehenderit unde quia aperiam ea voluptatem voluptate porro nam culpa natus repellat veniam enim corporis.</p>
             </div>
-            <div>
+            <footer>
                 <a href="contact.html" >Contact Us</a>
                 <br>
                 <a href="https://www.facebook.com/" target="_blank"> <img
@@ -59,7 +67,7 @@
                         width="22px" alt=""></a>
                 <br>
                 &copy; 2020 ROOM SEARCH PVT.LTD
-            </div>
+            </footer>
         </div>
     </body>
 </html>
