--- a/index.html
+++ b/index.html
@@ -5,24 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <style>
+        body{
+            height:100%;
+            width:100%;
+        }
+        .main_container{
+            height:100%;
+            width:100%;
+        }
+    </style>
 </head>
 <body>
-    <div>
-    <div>
-        <img src="/assests/images/logo.png" height="100px" width="150px" alt="logo">
-        <a href="login.html" >Login</a>
-    </div>
+    <div class="main_container">
+        <header>
+            <img src="/assests/images/logo.png" height="60px" width="60px" alt="logo">
+            <a href="login.html" >Login</a>
+        </header>
     <div>
         <input type="text" placeholder="city">
         <br>
-       <a href="list.html"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" height="300px" width="300px"  alt="delhi"></a> 
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg"  height="300px" width="300px" alt="goa">
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg"  height="300px" width="300px" alt="charminar">
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg"  height="300px" width="300px" alt="kolkata">
+       <a href="list.html"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" height="150px" width="150px"  alt="delhi"></a> 
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg"  height="150px" width="150px" alt="goa">
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg"  height="150px" width="150px" alt="charminar">
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg"  height="150px" width="150px" alt="kolkata">
         <br>
         <a href="/index.html">View more >> </a>
     </div>
-    <div>
+    <footer>
         <a href="contact.html">Contact Us</a>
         <br>
        <a href="https://www.facebook.com/" target="_blank"> <img src="/assests/images/facebook.png" height="20px" width="22px" alt=""></a>
@@ -30,7 +40,8 @@
        <a href="https://twitter.com/" target="_blank"> <img src="/assests/images/twitter.png" height="20px" width="22px" alt=""></a>
        <br>
        &copy; 2020 ROOM SEARCH PVT.LTD
-    </div>
+    </footer>
+ 
 </div>
 </body>
 </html>
