--- a/payment.html
+++ b/payment.html
@@ -5,16 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment</title>
+    <style>
+        body{
+            height: 100%;
+            width: 100%;
+        }
+        .main_container{
+            height: 100%;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <div>
-    <div>
-        <a href="index.html"><img src="/assests/images/logo.png" height="100px" width="150px" alt="logo"></a>
-        <a href="login.html" target="_blank">Login</a>
-    </div>
+    <div class="main_container">
+        <header>
+            <a href="index.html"><img src="/assests/images/logo.png" height="60px" width="60px" alt="logo"></a>
+            <a href="login.html" target="_blank">Login</a>
+        </header>
+
     <div>
         <div>
-            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
+            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="" height="500px" width="500px">
             <h3>Raddison Blu Hotel</h3>
             <p>#38 of 1,289 hotels in New Delhi</p>
             <p>National Highway 8, New Delhi 110017 India</p>
@@ -29,7 +40,7 @@
         </div>
         <a href="payment.html">Pay Now</a>
     </div>
-    <div>
+    <footer>
         <a href="contact.html" target="_blank">Contact Us</a>
         <br>
        <a href="https://www.facebook.com/" target="_blank"> <img src="/assests/images/facebook.png" height="20px" width="22px" alt=""></a>
@@ -37,7 +48,7 @@
        <a href="https://twitter.com/" target="_blank"> <img src="/assests/images/twitter.png" height="20px" width="22px" alt=""></a>
        <br>
        &copy; 2020 ROOM SEARCH PVT.LTD
-    </div>
+    </footer>
 </div>
 </body>
 </html>
