--- a/loader.html
+++ b/loader.html
@@ -5,10 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loader</title>
+    <style>
+        body{
+            margin: 0;
+            height: 100%;
+            width: 100%;
+    }
+    .loader{
+       
+            position: absolute;
+            left: 50%;
+            top: 50%;
+         border: 12px solid #f3f3f3; 
+         border-top: 12px solid #444444; 
+        border-radius: 50%;
+         width: 70px;
+         height: 70px;    
+    }
+    </style>
 </head>
 <body>
     <div>
-        LOADER
+        <div class="loader">
+
+        </div>
     </div>
 </body>
 </html>
