--- a/payment.html
+++ b/payment.html
@@ -7,12 +7,33 @@
     <title>Payment</title>
     <style>
         body{
-            height: 100%;
-            width: 100%;
-        }
+                height: 100%;
+                width: 100%;
+                margin: 0%;
+                background-color: #e0e0e0;
+            }
         .main_container{
             height: 100%;
             width: 100%;
+        }
+        header,footer{
+            background-color: rosybrown;
+        }
+        .content{
+            background-color: rgb(132, 136, 139);
+            width: 50%;
+            height: 20%;
+            margin: 2% auto;
+        }
+        .customer_info{
+            margin: 2%;
+
+        }
+        .tariff{
+            margin: 2%;
+            border: 1px solid black;
+            border-radius: 5px;
+            padding: 1% 2%;
         }
     </style>
 </head>
@@ -24,20 +45,23 @@
         </header>
 
     <div>
-        <div>
+        <div class="content">
             <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="" height="500px" width="500px">
             <h3>Raddison Blu Hotel</h3>
             <p>#38 of 1,289 hotels in New Delhi</p>
             <p>National Highway 8, New Delhi 110017 India</p>
         </div>
-        <div>
+        <div class="customer_info">
             <p><b>Name</b>:John Doe</p>
             <p><b>Number of Adults</b>: 2</p>
             <p><b>Check-in Date</b>: 06/06/2020</p>
             <p><b>Check-out Date</b>: 08/06/2020</p>
+        </div>
+        <div class="tariff">
             <p><b>Tariff Breakdown</b>: Rs 1000 x 2 Adults x 5 Nights</p>
             <p><b>Total Breakdown</b>: Rs 10000</p>
         </div>
+       
         <a href="payment.html">Pay Now</a>
     </div>
     <footer>
