--- a/list.html
+++ b/list.html
@@ -36,24 +36,30 @@
                          <a href="detail.html" class="hotel_cards" style="color: black; text-decoration: none;">
                         <div class="  left"> 
                             <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" height="200px" width="250px" >
+                           <div class="hotel_description">
                             <h3>Radisson Blu Hotel</h3>
                             <p>5 Star</p>
                             <p>New Delhi</p>
+                        </div>
                         </div>
                         </a>
                         <!-- <br> -->
                         <div class="hotel_cards right">
                             <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" height="200px" width="250px" >
+                            <div class="hotel_description">
                             <h3>The Lalit New Delhi</h3>
                             <p>4.5 Star</p>
                             <p>New Delhi</p>
                         </div>
+                        </div>
                     </div>    
                     <div class="hotel_cards1">
                             <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" height="200px" width="250px" >
+                            <div class="hotel_description1">
                             <h3>Taj Palace</h3>
                             <p>4.0 Star</p>
                             <p>New Delhi</p>
+                        </div>
                     </div>
                 <!-- </div> -->
                 <div class="map">
