--- a/detail.html
+++ b/detail.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles/detail.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -60,11 +61,38 @@
             <div>
                 <div class="image_form">
                     <div class="image">
-                        <img
+                        <!-- <img
                             src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"
                             alt="" height="350px" width="500px"
                             class="hotel_image">
-                        <br>
+                        <br> -->
+                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                            <!-- <ol class="carousel-indicators">
+                              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            </ol> -->
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img class="d-block hotel_image " src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"   alt="First slide" height="350px" width="500px">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block hotel_image" src="https://media-cdn.tripadvisor.com/media/photo-o/01/fa/51/70/r-the-spa.jpg" alt="Second slide" height="350px" width="500px">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block hotel_image " src="https://media-cdn.tripadvisor.com/media/photo-w/0e/b2/64/3f/radisson-blu-plaza-delhi.jpg" alt="Third slide"  height="350px" width="500px">
+                              </div>
+                            </div>
+                           
+                          </div>
+                          <a class="carousel-control-prev " href="#carouselExampleControls" role="button" data-slide="prev" >
+                            <span class="carousel-control-prev-icon prev" aria-hidden="true"></span>
+                            <span class="sr-only prev" >Previous</span>
+                          </a>
+                          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                          </a>
                     </div>
                     <div class="vl"></div>
                     <div class="form_div">
@@ -101,7 +129,13 @@
                 <div class="content">
                     <h2>Raddison Blu Hotel</h2>
                    <h4> RATING</h4>
-                    <p>5 Star</p>
+                   <div class="star_div">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                </div>
                    <h4> AMENITIES</h4>
                     <ul>
                         <li>Room Service</li>
@@ -124,7 +158,7 @@
                 </div>
             </div>
             <footer class="footer">
-                <a href="" type="button" class="btn btn-info contact" data-toggle="modal" data-target="#exampleModal">Contact Us</a>
+                <a href="" type="button" class="btn btn-info contact" data-toggle="modal" data-target="#exampleModal" >Contact Us</a>
 
   
                 <!-- Modal -->
