--- a/list.html
+++ b/list.html
@@ -7,7 +7,7 @@
         <link href="styles/index.css" type="stylesheets" rel="index.css">
         <title>List</title>
         <link rel="stylesheet" href="styles/list.css">
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!--- Bootstrap Cdn Links Online --------->
         <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
         <!-- jQuery library -->
@@ -77,7 +77,13 @@
                             <img id="hotel" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" height="200px" width="250px" >
                            <div class="hotel_description">
                             <h3>Radisson Blu Hotel</h3>
-                            <p>5 Star</p>
+                            <div class="star_div">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                            </div>
                             <p>New Delhi</p>
                         </div>
                         </div>
@@ -87,7 +93,13 @@
                             <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" height="200px" width="250px" >
                             <div class="hotel_description">
                             <h3>The Lalit New Delhi</h3>
-                            <p>4.5 Star</p>
+                            <div class="star_div">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star-half-o checked"></span>
+                            </div>
                             <p>New Delhi</p>
                         </div>
                         </div>
@@ -96,7 +108,13 @@
                             <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" height="200px" width="250px" >
                             <div class="hotel_description1">
                             <h3>Taj Palace</h3>
-                            <p>4.0 Star</p>
+                            <div class="star_div">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star "></span>
+                            </div>
                             <p>New Delhi</p>
                         </div>
                     </div>
