--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <input type="text" placeholder="City" id="search_bar">
             </div>
             <br>
-            <div class="city_cards">
+            <div class="city_cards" id="city_cards1">
                 <a href="list.html"><img
                         src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg"
                         height="150px" width="150px" alt="delhi"
@@ -96,7 +96,7 @@
                     class="city_images kolkata">
 
                 <div>
-                    <a href="/index.html"><button type="button" class="btn btn-secondary view_more">View More</button></a>
+                    <a href="/index.html"><button type="button" class="btn btn-secondary view_more" onclick="myFunction()">View More</button></a>
                    <!-- <p class="view_more" type="button" class="btn btn-secondary"
                             style="text-decoration: none; color:black;"> View
                             more >> </p> -->
@@ -161,5 +161,6 @@
                 src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
             <script
                 src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+                <script src="./scripts/index.js"></script>
         </body>
     </html>
